<resources>
    <string name="app_name">Keep_Pocket</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="menu_home">Home</string>

    <string name="menu_Income">Income</string>
    <string name="menu_Expenses">Expenses</string>
    <string name="menu_Categories">Categories</string>
    <string name="menu_Limits">Limits</string>
    <string name="signin">Sign In</string>
    <string name="createacount">Create Account</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fullName">Full Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="categoryName">Category Name</string>
    <string name="categoryColor">Category Color</string>
    <string name="limitValue">Limit Value</string>


    <string name="insertExpenses">Insert Expenses</string>
    <string name="insertIncome">Insert Income</string>
    <string name="insertCategory">Insert Category</string>
    <string name="insertLimits">Insert Limits</string>


    <string name="detailsExpenses">Expense Details</string>
    <string name="detailsIncome">Income Details</string>
    <string name="detailsCategory">Category Details</string>
    <string name="detailsLimits">Limit Details</string>

    <string name="listExpenses">Expense List</string>
    <string name="listIncome">Income List</string>
    <string name="listCategory">Category List</string>
    <string name="listLimits">Limit List</string>
    <string name="title_activity_income_details">IncomeDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>