<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Expenses"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_Expenses" />
        <item
            android:id="@+id/nav_Income"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Income" />
        <item
            android:id="@+id/nav_Categories"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_Categories" />
        <item
            android:id="@+id/nav_Limits"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_Limits" />
    </group>
</menu>