<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pt.estig.twdm.pdm.keep_pocket.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="pt.estig.twdm.pdm.keep_pocket.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery"/>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="pt.estig.twdm.pdm.keep_pocket.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow"/>
    <fragment
        android:id="@+id/nav_Categories"
        android:name="pt.estig.twdm.pdm.keep_pocket.ui.Categories.CategoriesFragment"
        android:label="@string/menu_Categories"
        tools:layout="@layout/fragment_categories"/>
    <fragment
        android:id="@+id/nav_Expenses"
        android:name="pt.estig.twdm.pdm.keep_pocket.ui.Expenses.ExpensesFragment"
        android:label="@string/menu_Expenses"
        tools:layout="@layout/fragment_expenses"/>
    <fragment
        android:id="@+id/nav_Income"
        android:name="pt.estig.twdm.pdm.keep_pocket.ui.Income.IncomeFragment"
        android:label="@string/menu_Income"
        tools:layout="@layout/fragment_income"/>
    <fragment
        android:id="@+id/nav_Limits"
        android:name="pt.estig.twdm.pdm.keep_pocket.ui.Limits.LimitsFragment"
        android:label="@string/menu_Limits"
        tools:layout="@layout/fragment_limits"/>
</navigation>