<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="saveLimit"
    tools:context=".AddLimit">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/insertLimits"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLimitValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/limitValue"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/spinnerLimit"
        app:layout_constraintStart_toStartOf="@+id/spinnerLimit"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLimit"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="saveLimit"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/editTextLimitValue"
        app:layout_constraintStart_toStartOf="@+id/editTextLimitValue"
        app:layout_constraintTop_toBottomOf="@+id/editTextLimitValue" />

    <Spinner
        android:id="@+id/spinnerLimit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

</androidx.constraintlayout.widget.ConstraintLayout>