<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpense">

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorText"
        android:onClick="saveExpense"
        android:text="@string/save"
        android:textColor="#5C5C5C"
        app:layout_constraintEnd_toEndOf="@+id/editTextExpenseValue"
        app:layout_constraintStart_toStartOf="@+id/editTextExpenseValue"
        app:layout_constraintTop_toBottomOf="@+id/editTextExpenseValue" />

    <EditText
        android:id="@+id/editTextExpenseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/value"
        android:inputType="number"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/expenseCategorySpinner"
        app:layout_constraintStart_toStartOf="@+id/expenseCategorySpinner"
        app:layout_constraintTop_toBottomOf="@+id/expenseCategorySpinner" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/insertExpenses"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextExpenseDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Spinner
        android:id="@+id/expenseCategorySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextExpenseDescription"
        app:layout_constraintStart_toStartOf="@+id/editTextExpenseDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextExpenseDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#F44336"
        android:clickable="true"
        android:onClick="previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>